eaportal-service/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: eaportal-service-gateway
  namespace: eaportal-service
spec:
  selector:
    istio: ingressgateway 
  servers:

  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: data-access-service-credential
    hosts:
      - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: eaportal-service
  namespace: eaportal-service
spec:
  hosts:
  - "*"
  gateways:
  - eaportal-service-gateway

  http:
  - match:
    - uri:
        exact: /update-report
    - uri:
        exact: /update-inventory      
    route:
    - destination:
        host: inventory-update-service
        port:
          number: 8585
  - match:    
    - uri:
        exact: /report-service        
    route:
    - destination:
        host: report-service
        port:
          number: 8383  
  - match:      
    - uri:
        exact: /inventory-service    
    route:
    - destination:
        host: inventory-service
        port:
          number: 8484   
  - match:      
    - uri:
        exact: /save/inventory 
    - uri:
        exact: /save/report
    - uri:
        exact: /data/inventory  
    - uri:
        exact: /data/reports 
    route:
    - destination:
        host: data-access-service
        port:
          number: 8282
